# msnchat-rs

./: .gitignore  Cargo.toml  README.md  build.rs  building.md  charset.md  config.toml  emoticons.md  imports.md  patches.md  properties.md  registry.md  struct.md
.cargo/: config.toml
.continue/mcpServers/: ida-pro-mcp-server.yaml
.github/workflows/: build.yml
src/: audio.rs  chat_options.rs  config.rs  control_socket.rs  hacks.rs  main.rs  manifest.template.xml  module_info.rs  window.rs
src/auth/: gatekeeper.rs  mod.rs
src/chat45/: mod.rs  registry.rs
src/chat45/controls/: mod.rs  patch.rs  utils.rs
src/chat45/controls/msnchatedit4/: hooks.rs  layout.rs  mod.rs
src/chat45/emoticons/: mod.rs  patch.rs
src/chat45/sockets/: connection.rs  manager.rs  mod.rs  patch.rs
src/com/: client_site.rs  control_site.rs  dispatch.rs  helpers.rs  inplace_site.rs  inplace_site_ex.rs  mod.rs  service_provider.rs  shared.rs
src/host/: loader.rs  mod.rs  window.rs
src/host/site/: browser.rs  client.rs  events.rs  frame.rs  inplace.rs  mod.rs  navigate.rs  provider.rs
src/network/: manager.rs  mod.rs  socket.rs  wsock32.md
src/patch/: atl_thunk.rs  charset_patch.rs  command_patch.rs  fixed_3720e0a5.rs  fixed_3721da6c.rs  font_style_patch.rs  gatekeeper.rs  gatekeeper_id.rs  loader_hook.rs  mod.rs  module_info.rs  network.rs  pe.rs  registry_hook.rs  sound_patch.rs  utils.rs  virtual_protect.rs
src/patch/channel/: mod.rs  recv.rs  send.rs
src/patch/directory/: mod.rs  recv.rs  send.rs
src/patch/msnchat45/: mod.rs  reloc.rs  startup.rs
src/patch/msnchat45/auth/: gatekeeper.rs  mod.rs
src/patch/msnchat45/commands/: mod.rs  version.rs
src/patch/msnchat45/ctcp/: mod.rs  version.rs
src/patch/msnchat45/nicklist/: menu.rs  mod.rs
src/patch/msnchat45/params/: mod.rs  resdll.rs  whisper_window.rs
src/patch/msnchat45/richedit/: mod.rs
src/patch/msnchat45/shared/: is_allowed_domain.rs  mod.rs
src/patch/msnchat45/socketx/: ipv6_support.rs  mod.rs
src/patch/msnchat45/url/: mod.rs  navigate.rs
src/path/: mod.rs
src/url/: mod.rs
src/utils/: ipv6.rs  mod.rs
